test grammar/parser.output
State 335 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | constants
    3                   | STRING_LITERAL
    4                   | '(' expression ')'

    5 constants: I_CONSTANT
    6          | F_CONSTANT

    7 postfix_expression: primary_expression
    8                   | postfix_expression '[' expression ']'
    9                   | postfix_expression '(' ')'
   10                   | postfix_expression '(' argument_expression_list ')'
   11                   | postfix_expression '.' IDENTIFIER
   12                   | postfix_expression PTR_OP IDENTIFIER
   13                   | postfix_expression INC_OP
   14                   | postfix_expression DEC_OP

   15 argument_expression_list: assignment_expression
   16                         | argument_expression_list ',' assignment_expression

   17 unary_expression: postfix_expression
   18                 | INC_OP unary_expression
   19                 | DEC_OP unary_expression
   20                 | unary_operator cast_expression
   21                 | SIZEOF unary_expression
   22                 | SIZEOF '(' type_name ')'

   23 unary_operator: '&'
   24               | '*'
   25               | '+'
   26               | '-'
   27               | '~'
   28               | '!'

   29 cast_expression: unary_expression
   30                | '(' type_name ')' cast_expression

   31 multiplicative_expression: cast_expression
   32                          | multiplicative_expression '*' cast_expression
   33                          | multiplicative_expression '/' cast_expression
   34                          | multiplicative_expression '%' cast_expression

   35 additive_expression: multiplicative_expression
   36                    | additive_expression '+' multiplicative_expression
   37                    | additive_expression '-' multiplicative_expression

   38 shift_expression: additive_expression
   39                 | shift_expression LEFT_OP additive_expression
   40                 | shift_expression RIGHT_OP additive_expression

   41 relational_expression: shift_expression
   42                      | relational_expression '<' shift_expression
   43                      | relational_expression '>' shift_expression
   44                      | relational_expression LE_OP shift_expression
   45                      | relational_expression GE_OP shift_expression

   46 equality_expression: relational_expression
   47                    | equality_expression EQ_OP relational_expression
   48                    | equality_expression NE_OP relational_expression

   49 and_expression: equality_expression
   50               | and_expression '&' equality_expression

   51 exclusive_or_expression: and_expression
   52                        | exclusive_or_expression '^' and_expression

   53 inclusive_or_expression: exclusive_or_expression
   54                        | inclusive_or_expression '|' exclusive_or_expression

   55 logical_and_expression: inclusive_or_expression
   56                       | logical_and_expression AND_OP inclusive_or_expression

   57 logical_or_expression: logical_and_expression
   58                      | logical_or_expression OR_OP logical_and_expression

   59 conditional_expression: logical_or_expression
   60                       | logical_or_expression '?' expression ':' conditional_expression

   61 assignment_expression: conditional_expression
   62                      | unary_expression assignment_operator assignment_expression

   63 assignment_operator: '='
   64                    | MUL_ASSIGN
   65                    | DIV_ASSIGN
   66                    | MOD_ASSIGN
   67                    | ADD_ASSIGN
   68                    | SUB_ASSIGN
   69                    | LEFT_ASSIGN
   70                    | RIGHT_ASSIGN
   71                    | AND_ASSIGN
   72                    | XOR_ASSIGN
   73                    | OR_ASSIGN

   74 expression: assignment_expression
   75           | expression ',' assignment_expression

   76 constant_expression: conditional_expression

   77 declaration: declaration_specifiers ';'
   78            | declaration_specifiers init_declarator_list ';'

   79 declaration_specifiers: storage_class_specifier
   80                       | storage_class_specifier declaration_specifiers
   81                       | type_specifier
   82                       | type_specifier declaration_specifiers
   83                       | type_qualifier
   84                       | type_qualifier declaration_specifiers

   85 init_declarator_list: init_declarator
   86                     | init_declarator_list ',' init_declarator

   87 init_declarator: declarator
   88                | declarator '=' initializer

   89 storage_class_specifier: TYPEDEF
   90                        | EXTERN
   91                        | STATIC
   92                        | AUTO
   93                        | REGISTER

   94 type_specifier: VOID
   95               | CHAR
   96               | SHORT
   97               | INT
   98               | LONG
   99               | FLOAT
  100               | DOUBLE
  101               | SIGNED
  102               | UNSIGNED
  103               | struct_or_union_specifier
  104               | enum_specifier
  105               | TYPE_NAME

  106 struct_or_union_specifier: struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  107                          | struct_or_union '{' struct_declaration_list '}'
  108                          | struct_or_union IDENTIFIER

  109 struct_or_union: STRUCT
  110                | UNION

  111 struct_declaration_list: struct_declaration
  112                        | struct_declaration_list struct_declaration

  113 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

  114 specifier_qualifier_list: type_specifier specifier_qualifier_list
  115                         | type_specifier
  116                         | type_qualifier specifier_qualifier_list
  117                         | type_qualifier

  118 struct_declarator_list: struct_declarator
  119                       | struct_declarator_list ',' struct_declarator

  120 struct_declarator: declarator
  121                  | ':' constant_expression
  122                  | declarator ':' constant_expression

  123 enum_specifier: ENUM '{' enumerator_list '}'
  124               | ENUM IDENTIFIER '{' enumerator_list '}'
  125               | ENUM IDENTIFIER

  126 enumerator_list: enumerator
  127                | enumerator_list ',' enumerator

  128 enumerator: IDENTIFIER
  129           | IDENTIFIER '=' constant_expression

  130 type_qualifier: CONST
  131               | VOLATILE

  132 declarator: pointer direct_declarator
  133           | direct_declarator

  134 direct_declarator: IDENTIFIER
  135                  | '(' declarator ')'
  136                  | direct_declarator '[' constant_expression ']'
  137                  | direct_declarator '[' ']'
  138                  | direct_declarator '(' parameter_type_list ')'
  139                  | direct_declarator '(' identifier_list ')'
  140                  | direct_declarator '(' ')'

  141 pointer: '*'
  142        | '*' type_qualifier_list
  143        | '*' pointer
  144        | '*' type_qualifier_list pointer

  145 type_qualifier_list: type_qualifier
  146                    | type_qualifier_list type_qualifier

  147 parameter_type_list: parameter_list
  148                    | parameter_list ',' ELLIPSIS

  149 parameter_list: parameter_declaration
  150               | parameter_list ',' parameter_declaration

  151 parameter_declaration: declaration_specifiers declarator
  152                      | declaration_specifiers abstract_declarator
  153                      | declaration_specifiers

  154 identifier_list: IDENTIFIER
  155                | identifier_list ',' IDENTIFIER

  156 type_name: specifier_qualifier_list
  157          | specifier_qualifier_list abstract_declarator

  158 abstract_declarator: pointer
  159                    | direct_abstract_declarator
  160                    | pointer direct_abstract_declarator

  161 direct_abstract_declarator: '(' abstract_declarator ')'
  162                           | '[' ']'
  163                           | '[' constant_expression ']'
  164                           | direct_abstract_declarator '[' ']'
  165                           | direct_abstract_declarator '[' constant_expression ']'
  166                           | '(' ')'
  167                           | '(' parameter_type_list ')'
  168                           | direct_abstract_declarator '(' ')'
  169                           | direct_abstract_declarator '(' parameter_type_list ')'

  170 initializer: assignment_expression
  171            | '{' initializer_list '}'
  172            | '{' initializer_list ',' '}'

  173 initializer_list: initializer
  174                 | initializer_list ',' initializer

  175 statement: labeled_statement
  176          | compound_statement
  177          | expression_statement
  178          | selection_statement
  179          | iteration_statement
  180          | jump_statement

  181 labeled_statement: IDENTIFIER ':' statement
  182                  | CASE constant_expression ':' statement
  183                  | DEFAULT ':' statement

  184 compound_statement: '{' '}'
  185                   | '{' statement_list '}'
  186                   | '{' declaration_list '}'
  187                   | '{' declaration_list statement_list '}'

  188 declaration_list: declaration
  189                 | declaration_list declaration

  190 statement_list: statement
  191               | statement_list statement

  192 expression_statement: ';'
  193                     | expression ';'

  194 selection_statement: IF '(' expression ')' statement
  195                    | IF '(' expression ')' statement ELSE statement
  196                    | SWITCH '(' expression ')' statement

  197 iteration_statement: WHILE '(' expression ')' statement
  198                    | DO statement WHILE '(' expression ')' ';'
  199                    | FOR '(' expression_statement expression_statement ')' statement
  200                    | FOR '(' expression_statement expression_statement expression ')' statement

  201 jump_statement: GOTO IDENTIFIER ';'
  202               | CONTINUE ';'
  203               | BREAK ';'
  204               | RETURN ';'
  205               | RETURN expression ';'

  206 translation_unit: external_declaration
  207                 | translation_unit external_declaration

  208 external_declaration: function_definition
  209                     | declaration

  210 function_definition: declaration_specifiers declarator declaration_list compound_statement
  211                    | declaration_specifiers declarator compound_statement
  212                    | declarator declaration_list compound_statement
  213                    | declarator compound_statement


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 28
    '%' (37) 34
    '&' (38) 23 50
    '(' (40) 4 9 10 22 30 135 138 139 140 161 166 167 168 169 194 195 196 197 198 199 200
    ')' (41) 4 9 10 22 30 135 138 139 140 161 166 167 168 169 194 195 196 197 198 199 200
    '*' (42) 24 32 141 142 143 144
    '+' (43) 25 36
    ',' (44) 16 75 86 119 127 148 150 155 172 174
    '-' (45) 26 37
    '.' (46) 11
    '/' (47) 33
    ':' (58) 60 121 122 181 182 183
    ';' (59) 77 78 113 192 193 198 201 202 203 204 205
    '<' (60) 42
    '=' (61) 63 88 129
    '>' (62) 43
    '?' (63) 60
    '[' (91) 8 136 137 162 163 164 165
    ']' (93) 8 136 137 162 163 164 165
    '^' (94) 52
    '{' (123) 106 107 123 124 171 172 184 185 186 187
    '|' (124) 54
    '}' (125) 106 107 123 124 171 172 184 185 186 187
    '~' (126) 27
    error (256)
    IDENTIFIER (258) 1 11 12 106 108 124 125 128 129 134 154 155 181 201
    I_CONSTANT (259) 5
    F_CONSTANT (260) 6
    STRING_LITERAL (261) 3
    SIZEOF (262) 21 22
    PTR_OP (263) 12
    INC_OP (264) 13 18
    DEC_OP (265) 14 19
    LEFT_OP (266) 39
    RIGHT_OP (267) 40
    LE_OP (268) 44
    GE_OP (269) 45
    EQ_OP (270) 47
    NE_OP (271) 48
    AND_OP (272) 56
    OR_OP (273) 58
    MUL_ASSIGN (274) 64
    DIV_ASSIGN (275) 65
    MOD_ASSIGN (276) 66
    ADD_ASSIGN (277) 67
    SUB_ASSIGN (278) 68
    LEFT_ASSIGN (279) 69
    RIGHT_ASSIGN (280) 70
    AND_ASSIGN (281) 71
    XOR_ASSIGN (282) 72
    OR_ASSIGN (283) 73
    TYPE_NAME (284) 105
    TYPEDEF (285) 89
    EXTERN (286) 90
    STATIC (287) 91
    AUTO (288) 92
    REGISTER (289) 93
    CHAR (290) 95
    SHORT (291) 96
    INT (292) 97
    LONG (293) 98
    SIGNED (294) 101
    UNSIGNED (295) 102
    FLOAT (296) 99
    DOUBLE (297) 100
    CONST (298) 130
    VOLATILE (299) 131
    VOID (300) 94
    STRUCT (301) 109
    UNION (302) 110
    ENUM (303) 123 124 125
    ELLIPSIS (304) 148
    CASE (305) 182
    DEFAULT (306) 183
    IF (307) 194 195
    ELSE (308) 195
    SWITCH (309) 196
    WHILE (310) 197 198
    DO (311) 198
    FOR (312) 199 200
    GOTO (313) 201
    CONTINUE (314) 202
    BREAK (315) 203
    RETURN (316) 204 205


Nonterminals, with rules where they appear

    $accept (86)
        on left: 0
    primary_expression (87)
        on left: 1 2 3 4
        on right: 7
    constants (88)
        on left: 5 6
        on right: 2
    postfix_expression (89)
        on left: 7 8 9 10 11 12 13 14
        on right: 8 9 10 11 12 13 14 17
    argument_expression_list (90)
        on left: 15 16
        on right: 10 16
    unary_expression (91)
        on left: 17 18 19 20 21 22
        on right: 18 19 21 29 62
    unary_operator (92)
        on left: 23 24 25 26 27 28
        on right: 20
    cast_expression (93)
        on left: 29 30
        on right: 20 30 31 32 33 34
    multiplicative_expression (94)
        on left: 31 32 33 34
        on right: 32 33 34 35 36 37
    additive_expression (95)
        on left: 35 36 37
        on right: 36 37 38 39 40
    shift_expression (96)
        on left: 38 39 40
        on right: 39 40 41 42 43 44 45
    relational_expression (97)
        on left: 41 42 43 44 45
        on right: 42 43 44 45 46 47 48
    equality_expression (98)
        on left: 46 47 48
        on right: 47 48 49 50
    and_expression (99)
        on left: 49 50
        on right: 50 51 52
    exclusive_or_expression (100)
        on left: 51 52
        on right: 52 53 54
    inclusive_or_expression (101)
        on left: 53 54
        on right: 54 55 56
    logical_and_expression (102)
        on left: 55 56
        on right: 56 57 58
    logical_or_expression (103)
        on left: 57 58
        on right: 58 59 60
    conditional_expression (104)
        on left: 59 60
        on right: 60 61 76
    assignment_expression (105)
        on left: 61 62
        on right: 15 16 62 74 75 170
    assignment_operator (106)
        on left: 63 64 65 66 67 68 69 70 71 72 73
        on right: 62
    expression (107)
        on left: 74 75
        on right: 4 8 60 75 193 194 195 196 197 198 200 205
    constant_expression (108)
        on left: 76
        on right: 121 122 129 136 163 165 182
    declaration (109)
        on left: 77 78
        on right: 188 189 209
    declaration_specifiers (110)
        on left: 79 80 81 82 83 84
        on right: 77 78 80 82 84 151 152 153 210 211
    init_declarator_list (111)
        on left: 85 86
        on right: 78 86
    init_declarator (112)
        on left: 87 88
        on right: 85 86
    storage_class_specifier (113)
        on left: 89 90 91 92 93
        on right: 79 80
    type_specifier (114)
        on left: 94 95 96 97 98 99 100 101 102 103 104 105
        on right: 81 82 114 115
    struct_or_union_specifier (115)
        on left: 106 107 108
        on right: 103
    struct_or_union (116)
        on left: 109 110
        on right: 106 107 108
    struct_declaration_list (117)
        on left: 111 112
        on right: 106 107 112
    struct_declaration (118)
        on left: 113
        on right: 111 112
    specifier_qualifier_list (119)
        on left: 114 115 116 117
        on right: 113 114 116 156 157
    struct_declarator_list (120)
        on left: 118 119
        on right: 113 119
    struct_declarator (121)
        on left: 120 121 122
        on right: 118 119
    enum_specifier (122)
        on left: 123 124 125
        on right: 104
    enumerator_list (123)
        on left: 126 127
        on right: 123 124 127
    enumerator (124)
        on left: 128 129
        on right: 126 127
    type_qualifier (125)
        on left: 130 131
        on right: 83 84 116 117 145 146
    declarator (126)
        on left: 132 133
        on right: 87 88 120 122 135 151 210 211 212 213
    direct_declarator (127)
        on left: 134 135 136 137 138 139 140
        on right: 132 133 136 137 138 139 140
    pointer (128)
        on left: 141 142 143 144
        on right: 132 143 144 158 160
    type_qualifier_list (129)
        on left: 145 146
        on right: 142 144 146
    parameter_type_list (130)
        on left: 147 148
        on right: 138 167 169
    parameter_list (131)
        on left: 149 150
        on right: 147 148 150
    parameter_declaration (132)
        on left: 151 152 153
        on right: 149 150
    identifier_list (133)
        on left: 154 155
        on right: 139 155
    type_name (134)
        on left: 156 157
        on right: 22 30
    abstract_declarator (135)
        on left: 158 159 160
        on right: 152 157 161
    direct_abstract_declarator (136)
        on left: 161 162 163 164 165 166 167 168 169
        on right: 159 160 164 165 168 169
    initializer (137)
        on left: 170 171 172
        on right: 88 173 174
    initializer_list (138)
        on left: 173 174
        on right: 171 172 174
    statement (139)
        on left: 175 176 177 178 179 180
        on right: 181 182 183 190 191 194 195 196 197 198 199 200
    labeled_statement (140)
        on left: 181 182 183
        on right: 175
    compound_statement (141)
        on left: 184 185 186 187
        on right: 176 210 211 212 213
    declaration_list (142)
        on left: 188 189
        on right: 186 187 189 210 212
    statement_list (143)
        on left: 190 191
        on right: 185 187 191
    expression_statement (144)
        on left: 192 193
        on right: 177 199 200
    selection_statement (145)
        on left: 194 195 196
        on right: 178
    iteration_statement (146)
        on left: 197 198 199 200
        on right: 179
    jump_statement (147)
        on left: 201 202 203 204 205
        on right: 180
    translation_unit (148)
        on left: 206 207
        on right: 0 207
    external_declaration (149)
        on left: 208 209
        on right: 206 207
    function_definition (150)
        on left: 210 211 212 213
        on right: 208


State 0

    0 $accept: . translation_unit $end

    IDENTIFIER  shift, and go to state 1
    TYPE_NAME   shift, and go to state 2
    TYPEDEF     shift, and go to state 3
    EXTERN      shift, and go to state 4
    STATIC      shift, and go to state 5
    AUTO        shift, and go to state 6
    REGISTER    shift, and go to state 7
    CHAR        shift, and go to state 8
    SHORT       shift, and go to state 9
    INT         shift, and go to state 10
    LONG        shift, and go to state 11
    SIGNED      shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    FLOAT       shift, and go to state 14
    DOUBLE      shift, and go to state 15
    CONST       shift, and go to state 16
    VOLATILE    shift, and go to state 17
    VOID        shift, and go to state 18
    STRUCT      shift, and go to state 19
    UNION       shift, and go to state 20
    ENUM        shift, and go to state 21
    '('         shift, and go to state 22
    '*'         shift, and go to state 23

    declaration                go to state 24
    declaration_specifiers     go to state 25
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    declarator                 go to state 32
    direct_declarator          go to state 33
    pointer                    go to state 34
    translation_unit           go to state 35
    external_declaration       go to state 36
    function_definition        go to state 37


State 1

  134 direct_declarator: IDENTIFIER .

    $default  reduce using rule 134 (direct_declarator)


State 2

  105 type_specifier: TYPE_NAME .

    $default  reduce using rule 105 (type_specifier)


State 3

   89 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 89 (storage_class_specifier)


State 4

   90 storage_class_specifier: EXTERN .

    $default  reduce using rule 90 (storage_class_specifier)


State 5

   91 storage_class_specifier: STATIC .

    $default  reduce using rule 91 (storage_class_specifier)


State 6

   92 storage_class_specifier: AUTO .

    $default  reduce using rule 92 (storage_class_specifier)


State 7

   93 storage_class_specifier: REGISTER .

    $default  reduce using rule 93 (storage_class_specifier)


State 8

   95 type_specifier: CHAR .

    $default  reduce using rule 95 (type_specifier)


State 9

   96 type_specifier: SHORT .

    $default  reduce using rule 96 (type_specifier)


State 10

   97 type_specifier: INT .

    $default  reduce using rule 97 (type_specifier)


State 11

   98 type_specifier: LONG .

    $default  reduce using rule 98 (type_specifier)


State 12

  101 type_specifier: SIGNED .

    $default  reduce using rule 101 (type_specifier)


State 13

  102 type_specifier: UNSIGNED .

    $default  reduce using rule 102 (type_specifier)


State 14

   99 type_specifier: FLOAT .

    $default  reduce using rule 99 (type_specifier)


State 15

  100 type_specifier: DOUBLE .

    $default  reduce using rule 100 (type_specifier)


State 16

  130 type_qualifier: CONST .

    $default  reduce using rule 130 (type_qualifier)


State 17

  131 type_qualifier: VOLATILE .

    $default  reduce using rule 131 (type_qualifier)


State 18

   94 type_specifier: VOID .

    $default  reduce using rule 94 (type_specifier)


State 19

  109 struct_or_union: STRUCT .

    $default  reduce using rule 109 (struct_or_union)


State 20

  110 struct_or_union: UNION .

    $default  reduce using rule 110 (struct_or_union)


State 21

  123 enum_specifier: ENUM . '{' enumerator_list '}'
  124               | ENUM . IDENTIFIER '{' enumerator_list '}'
  125               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 38
    '{'         shift, and go to state 39


State 22

  135 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 22
    '*'         shift, and go to state 23

    declarator         go to state 40
    direct_declarator  go to state 33
    pointer            go to state 34


State 23

  141 pointer: '*' .
  142        | '*' . type_qualifier_list
  143        | '*' . pointer
  144        | '*' . type_qualifier_list pointer

    CONST     shift, and go to state 16
    VOLATILE  shift, and go to state 17
    '*'       shift, and go to state 23

    $default  reduce using rule 141 (pointer)

    type_qualifier       go to state 41
    pointer              go to state 42
    type_qualifier_list  go to state 43


State 24

  209 external_declaration: declaration .

    $default  reduce using rule 209 (external_declaration)


State 25

   77 declaration: declaration_specifiers . ';'
   78            | declaration_specifiers . init_declarator_list ';'
  210 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  211                    | declaration_specifiers . declarator compound_statement

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 22
    '*'         shift, and go to state 23
    ';'         shift, and go to state 44

    init_declarator_list  go to state 45
    init_declarator       go to state 46
    declarator            go to state 47
    direct_declarator     go to state 33
    pointer               go to state 34


State 26

   79 declaration_specifiers: storage_class_specifier .
   80                       | storage_class_specifier . declaration_specifiers

    TYPE_NAME  shift, and go to state 2
    TYPEDEF    shift, and go to state 3
    EXTERN     shift, and go to state 4
    STATIC     shift, and go to state 5
    AUTO       shift, and go to state 6
    REGISTER   shift, and go to state 7
    CHAR       shift, and go to state 8
    SHORT      shift, and go to state 9
    INT        shift, and go to state 10
    LONG       shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    FLOAT      shift, and go to state 14
    DOUBLE     shift, and go to state 15
    CONST      shift, and go to state 16
    VOLATILE   shift, and go to state 17
    VOID       shift, and go to state 18
    STRUCT     shift, and go to state 19
    UNION      shift, and go to state 20
    ENUM       shift, and go to state 21

    $default  reduce using rule 79 (declaration_specifiers)

    declaration_specifiers     go to state 48
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31


State 27

   81 declaration_specifiers: type_specifier .
   82                       | type_specifier . declaration_specifiers

    TYPE_NAME  shift, and go to state 2
    TYPEDEF    shift, and go to state 3
    EXTERN     shift, and go to state 4
    STATIC     shift, and go to state 5
    AUTO       shift, and go to state 6
    REGISTER   shift, and go to state 7
    CHAR       shift, and go to state 8
    SHORT      shift, and go to state 9
    INT        shift, and go to state 10
    LONG       shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    FLOAT      shift, and go to state 14
    DOUBLE     shift, and go to state 15
    CONST      shift, and go to state 16
    VOLATILE   shift, and go to state 17
    VOID       shift, and go to state 18
    STRUCT     shift, and go to state 19
    UNION      shift, and go to state 20
    ENUM       shift, and go to state 21

    $default  reduce using rule 81 (declaration_specifiers)

    declaration_specifiers     go to state 49
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31


State 28

  103 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 103 (type_specifier)


State 29
